--- a/landing1/index.html
+++ b/landing1/index.html
@@ -672,7 +672,7 @@
                             <div class="feature-icon">
                                 <i class="fas fa-check"></i>
                             </div>
-                            <div class="feature-text">Данные из вашей админ-панели</div>
+                            <div class="feature-text">Постоянно обновляем и актуализируем информацию</div>
                         </div>
                         <div class="feature-item">
                             <div class="feature-icon">
