--- a/landing2/index.html
+++ b/landing2/index.html
@@ -1611,7 +1611,7 @@
                 
                 <div class="text-center flex-1 min-w-0">
                     <div class="font-bold text-gray-900 text-lg">Результаты подбора</div>
-                    <div class="text-sm text-gray-500">Данные загружены из админ-панели</div>
+                    <div class="text-sm text-gray-500">Актуализировано и собрано</div>
                 </div>
                 
                 <!-- Кнопка Все офферы в шапке -->
