--- a/landing2/index.html
+++ b/landing2/index.html
@@ -1305,7 +1305,7 @@
                     
                     <div class="admin-data-notice">
                         <i class="fas fa-sync-alt mr-2"></i>
-                        Данные загружаются из вашей админ-панели
+                        Актуализируем и обновляем информацию каждые 24 часа
                     </div>
                     
                     <!-- Дополнительные преимущества -->
