--- a/landing2/index.html
+++ b/landing2/index.html
@@ -2421,7 +2421,7 @@
                 }
             } else {
                 if (notice) {
-                    notice.innerHTML = '<i class="fas fa-sync-alt mr-2"></i> Актуализируем и обновляем данные каждые 24 часа';
+                    notice.innerHTML = '<i class="fas fa-sync-alt mr-2"></i> Актуализируем и обновляем информацию каждые 24 часа';
                 }
             }
         }
