--- a/landing2/index.html
+++ b/landing2/index.html
@@ -1248,7 +1248,7 @@
                         </div>
                         <div class="text-left">
                             <h3 class="font-bold text-gray-900 mb-1">Первый займ 0%</h3>
-                            <p class="text-gray-600 text-sm">Часто можно получить совсем бесплатно</p>
+                            <p class="text-gray-600 text-sm">Без скрытых комиссий и переплат</p>
                         </div>
                     </div>
                 </div>
