--- a/landing1/index.html
+++ b/landing1/index.html
@@ -1386,7 +1386,7 @@
             if (connected) {
                 adminNotice.innerHTML = `
                     <i class="fas fa-check-circle"></i>
-                    Данные загружены из админ-панели (${offersData.length} офферов)
+                    Актуализировано и собрано (${offersData.length} предложений)
                 `;
                 adminNotice.style.background = '#f0fdf4';
                 adminNotice.style.borderColor = '#dcfce7';
